feat: Price phase updated
